--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 	<div class="sw__left">
         <div class="f-carousel" id="Carousel-1">
             <div class="f-carousel__slide" data-fancybox="gallery" data-src="./eu-gallery/CH ATTILA Von Der STADT HAMBURG.jpg">
-                <div class="sw__img"><img src="./eu-gallery/CH ATTILA Von Der STADT HAMBURG.jpg" data-xpcomment="Комментарий 1"></div>
+                <div class="sw__img"><img src="./eu-gallery/CH ATTILA Von Der STADT HAMBURG.jpg"></div>
                 <span class="caption"></span>
             </div>
             <div class="f-carousel__slide" data-fancybox="gallery" data-src="./eu-gallery/CH AVIVA VON HARLEKIN.jpg">
-                <div class="sw__img"><img src="./eu-gallery/CH AVIVA VON HARLEKIN.jpg" data-xpcomment="Комментарий 2"></div>
+                <div class="sw__img"><img src="./eu-gallery/CH AVIVA VON HARLEKIN.jpg"></div>
                 <span class="caption"></span>
             </div>
             <div class="f-carousel__slide" data-fancybox="gallery" data-src="./eu-gallery/CH BENTO VON SEEACHER.jpg">
-                <div class="sw__img"><img src="./eu-gallery/CH BENTO VON SEEACHER.jpg" data-xpcomment="Комментарий 3"></div>
+                <div class="sw__img"><img src="./eu-gallery/CH BENTO VON SEEACHER.jpg"></div>
                 <span class="caption"></span>
             </div>
             <div class="f-carousel__slide" data-fancybox="gallery" data-src="./eu-gallery/CH BART Von MARIENWARD.jpg">
-                <div class="sw__img"><img src="./eu-gallery/CH BART Von MARIENWARD.jpg" data-xpcomment="Комментарий 4"></div>
+                <div class="sw__img"><img src="./eu-gallery/CH BART Von MARIENWARD.jpg"></div>
                 <span class="caption"></span>
             </div>
             <div class="f-carousel__slide" data-fancybox="gallery" data-src="./eu-gallery/CH ATTILA Von Der STADT HAMBURG.jpg">
-                <div class="sw__img"><img src="./eu-gallery/CH BEAUTY DE PULCKERRIMI.jpg" data-xpcomment="Комментарий 5"></div>
+                <div class="sw__img"><img src="./eu-gallery/CH BEAUTY DE PULCKERRIMI.jpg"></div>
                 <span class="caption"></span>
             </div>    
         </div>
